# A-web-application.

./: README.md  pyproject.toml
src/: api_hh.py  database.py  db_manager.py  main.py  utils.py
tests/: test_db_manager.py
